Patron State aplicado